# AI-Admissions-Detector

./: .gitignore  AI-Admissions-Detector.code-workspace  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
app/: app.py  dockerfile  pyproject.toml  requirements.txt
src/: TrainingAndAnalysis.ipynb  TrainingAndAnalysis.py
