[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "eli5==0.13.0",
  "matplotlib==3.5.3",
  "numba>=0.60.0",
  "numpy==1.22.4",
  "psutil>=7.0.0",
  "python-docx>=1.1.2",
  "scikit-learn==1.0.2",
  "scipy==1.7.3",
  "shap>=0.47.1",
  "spacy>=3.8.5",
  "streamlit==1.21.0",
  "torch>=2.6.0",
  "transformers>=4.51.1",
]

[tool.uv.workspace]
members = [
    "thesis_detector",
]
