[project]
name = "ai-admissions-detector"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "eli5==0.13.0",
  "en-core-web-sm",
  "matplotlib==3.5.3",
  "numba>=0.60.0",
  "numpy==1.22.4",
  "pandas>=1.5.1",
  "psutil>=7.0.0",
  "python-docx>=1.1.2",
  "scikit-learn==1.0.2",
  "scipy==1.7.3",
  "shap>=0.47.1",
  "spacy>=3.8.5",
  "streamlit==1.21.0",
  "torch>=2.6.0",
  "transformers>=4.51.1",
  "pip>=25.0.1",
]

[dependency-groups]
dev = [
  "ipykernel>=6.29.5",
  "pytest>=8.3.5",
  "ruff>=0.11.5",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[tool.uv.workspace]
members = ["app"]
